package source.Management;

public class Revenue {

}
