@startuml class_diagram

left to right direction

abstract Food {
    # id: Integer
    # name: String
    # category: String
    # discount: Float
    # price: Integer

    + modifyName(String name): Food
    + modifyCategory(String category): Food
    + modifyDiscount(Float discount): Food
    + modifyPrice(Integer price): Food
    + getName(): String
    + getType(): String
    + getDiscount(): Float
    + getPrice(): Integer
    + cost(): Long
}

class Combo {
    - array_dishID: ArrayList<Integer>
    - quantity: ArrayList<Integer>

    + addDish(int dishID, int amount): Combo
    + removeDish(int index): Combo
    + modifyAmount(int index): Combo
    + toString(): String
}

class Menu << Singleton >> {
    - instance: Menu
    - list: ArrayList<Food>

    - Menu()
    + getInstance(): Menu
    + createDish(): Menu
    + createCombo(): Menu
    + modifyDiscount(String category, Float discount): Menu
    + getFood(int index): Food
    + findGenFood: T
    + addAllGenFood(ArrayList<T extends Food> foods): void
    + PrintMenu(): void
}

class Order {
    - id: int
    - list_foodID: ArrayList<Food>
    - quantity: ArrayList<Food>
    - date_time: LocalDateTime
    - note: String


    + addFood(Integer foodID, int quantity) Order
    + fetID(): int
    + removeOrder(int index): Order
    + increaseQuantity(int index): Order
    + decreaseQuantity(int index): Order
    + modifyNote(String note): Order
    + calcOrder(): Long
}

class Revenue << Singleton >> {
    - revenue: Revenue
    - date_time: String[]
    - type: String[]
    - name: String[]
    - amount: int[]
    - revenue: int[]

    - Revenue()
    + getInstanceRevenue(): Revenue
    + deleteRevenue(): void
    + totalRevenue(String date): int
}

class Income << Singleton >> {
    - income: Income

    - Income()
    + getInstanceIncome(): Income
    + calcIncome(String date): int
}

class Cost {
    # id: Integer
    # type: Character
    # date: LocalDate
    # quantity: Float
    # unitId: Integer
    # totalAmount: Integer

    + modifyType(Character type): Cost
    + modifyDate(LocalDate date): Cost
    + modifyDescription(String description): Cost
    + modifyQuantity(Float quantity): Cost
    + modifyUnit(Integer unitID): Cost
    + modifyCostAmount(Integer totalAmount): Cost
    + getID(): Integer
    + getType(): Character
    + getDate(): LocalDate
    + getDescription(): String
    + getQuantity(): Float
    + getUnitID(): Integer
    + getTotalAmount(): Integer
}

class ManagementCost << Singleton >> {
    - ManagementCost()
    + getInstance(): ManagementCost
    + readCost(): ArrayList<Cost>
    + writeCost(Cost newCost): void
}

class Unit {
    # id: Integer
    # name: String

    + modifyName(String name): UnitID
    + getID(): Integer
    + getName(): String
}

class Dish {
    - specification
}

class Database << Singleton >> {
    - Database()
    - initData():
    + initDatabase(): void
    + getConnection(): Connection
    + closeConnection(): void
    + readAllDishes(): ArrayList<Dish>
    + readAllCombo(): ArrayList<Combo>
    + readOrderBy(ReadBy readBy, LocalDateTime date): ArrayList<Order>
    + readCostBy(ReadBy readBy, LocalDateTime date): ArrayList<Cost>
}

class Field {
    + Menu: static enum
    + Category: static enum
    + SpecificType: static enum
    + Combo: static enum
    + Payment: static enum
    + SpecificPayment: static enum
    + Cost: static enum
    + Unit: static enum
}

Database "1" -o "1..*" Cost
Database "1" ---o "1..*" Revenue
Database "1" -o "1..*" Combo
Database "1" --o "1..*" Dish
Field "1" -* "1..*" Database
Combo --|> Food: extends
Dish --|> Food: extends
Dish  "1..*" -o "1..*" Combo
Order "1..*" o- "1..*" Food
Food "1..*" --o "1" Menu
Revenue --> Income
ManagementCost --> Income

class GUI{

}

Unit "1" -* "1..*" Cost
Cost "1..*" --* "1" ManagementCost
Order "1..*" -o "1" GUI
Menu "1" --o "1" GUI
ManagementCost "1" --o "1" GUI
Revenue "1" --o "1" GUI
Income "1" --o "1" GUI



@enduml
